# article-research-mcp

./: CONTEXT.md  HERMES.md  README.md  pyproject.toml
context/: methodology.md
docs/adr/: 0001-umbrella-mcp-not-devto-extension.md  0002-deterministic-rank-with-optional-llm.md  0003-stdio-dynamic-catalogue-exposure.md  README.md
research/: LINKS.md  README.md
research/github-projects/: horizon.md
research/templates/: project-note.md
scripts/: daily_brief.py
src/article_research/: __init__.py  planning.py  server.py
src/article_research/pipeline/: brief.py  dedupe.py  llm_score.py
src/article_research/sources/: devto.py  hn.py  rss.py
tests/: test_dedupe.py  test_hn.py  test_llm_score.py  test_rss.py
