[project]
name = "article-research-mcp"
version = "0.3.0"
description = "Article and tutorial research MCP for agent planning — dev.to, briefs, dedupe, deep-research hooks"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Stephen Phillips", email = "stephen.phillips.work@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
article-research-mcp = "article_research.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/article_research"]